jsアコーディオン途中まで

--- a/contact-thanks.html
+++ b/contact-thanks.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="#" class="header__logo">
+      <a href="./index.html" class="header__logo">
         <img src="./img/logo.svg" alt="自然の恵み農園" />
       </a>
       <button class="header__btn" type="button">
@@ -38,22 +38,22 @@
       <nav class="header__menu">
         <ul>
           <li>
-            <a href="#" class="header__link"
+            <a href="./index.html" class="header__link"
               >トップ<span class="sp-only">top</span></a
             >
           </li>
           <li>
-            <a href="#about" class="header__link"
+            <a href="./index.html#about" class="header__link"
               >私たちについて<span class="sp-only">about</span></a
             >
           </li>
           <li>
-            <a href="#introduction" class="header__link"
+            <a href="./index.html#introduction" class="header__link"
               >活動紹介<span class="sp-only">works</span></a
             >
           </li>
           <li>
-            <a href="#faq" class="header__link"
+            <a href="./index.html#faq" class="header__link"
               >よくあるご質問<span class="sp-only">faq</span></a
             >
           </li>
@@ -63,7 +63,7 @@
             >
           </li>
           <li>
-            <a href="#access" class="header__link"
+            <a href="./index.html#access" class="header__link"
               >アクセス<span class="sp-only">access</span></a
             >
           </li>
@@ -76,7 +76,9 @@
             </div>
           </li>
           <li>
-            <a href="#" class="header__link--contact">お問い合わせ</a>
+            <a href="./contact.html" class="header__link--contact"
+              >お問い合わせ</a
+            >
           </li>
         </ul>
       </nav>
@@ -120,8 +122,15 @@
     <footer class="footer">
       <div class="footer__container container">
         <div class="footer__info">
-          <a href="#" class="footer__logo">
-            <img src="./img/logo.svg" alt="自然の恵み農園" />
+          <a href="./index.html" class="footer__logo">
+            <img
+              src="./img/logo.svg"
+              width="202"
+              height="34"
+              loading="lazy"
+              decoding="async"
+              alt="自然の恵み農園"
+            />
           </a>
           <address class="footer__info-text">
             〒123-4567<br />
@@ -135,20 +144,32 @@
         <div class="footer__link">
           <nav class="footer__menu">
             <ul>
-              <li><a href="#" class="footer__link-item">ホーム</a></li>
               <li>
-                <a href="#about" class="footer__link-item">私たちについて</a>
+                <a href="./index.html" class="footer__link-item">ホーム</a>
               </li>
               <li>
-                <a href="#introduction" class="footer__link-item">活動紹介</a>
+                <a href="./index.html#about" class="footer__link-item"
+                  >私たちについて</a
+                >
               </li>
               <li>
-                <a href="#faq" class="footer__link-item">よくあるご質問</a>
+                <a href="./index.html#introduction" class="footer__link-item"
+                  >活動紹介</a
+                >
+              </li>
+              <li>
+                <a href="./index.html#faq" class="footer__link-item"
+                  >よくあるご質問</a
+                >
               </li>
               <li>
                 <a href="./archive.html" class="footer__link-item">お知らせ</a>
               </li>
-              <li><a href="#access" class="footer__link-item">アクセス</a></li>
+              <li>
+                <a href="./index.html#access" class="footer__link-item"
+                  >アクセス</a
+                >
+              </li>
             </ul>
           </nav>
           <ul class="footer__sns">
