--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
+      integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -103,16 +109,12 @@
                   お問い合わせ種別<span class="required">必須</span>
                 </label>
                 <div class="contact-option contact-input">
-                  <select name="your-option" id="your-option" class="" required>
-                    <option value="" selected disabled>選択してください</option>
-                    <option value="農園見学・体験について">
-                      農園見学・体験について
-                    </option>
-                    <option value="オンライン販売について">
-                      オンライン販売について
-                    </option>
-                    <option value="その他">その他</option>
-                  </select>
+                  <span>選択してください</span>
+                </div>
+                <div class="contact-select">
+                  <span> 農園見学・体験について </span>
+                  <span> オンライン販売について </span>
+                  <span>その他</span>
                 </div>
               </div>
               <div class="contact-item">
